Add images and general info

--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,27 @@
     <title>Contactanos</title>
   </head>
   <body>
-    <div class="">
-        <h1>Contacto</h1>
+
+    <h1>Contacto</h1>
+
+    <div class="contacto">
+        <p>Puede contactarnos a traves de nuestro telefono o correo electronico:</p>
+        <p>Telefono: 928-504-803-802-465</p>
+        <p>
+            E-mail: <a href="mailto:distribuidoras@rodriguez.sl">distribuidoras@rodriguez.sl</a>
+        </p>
     </div>
+
+    <p>
+      O directamente en nuestros almacenes, en la calle Programacion nº 4 (Las Palmas de Gran Canaria, Schamann):
+    </p>
+    <img src="img/almacen.jpg" alt="">
+
+    <hr>
+
+    <footer>
+        <a href="index.html">Pagina principal</a>
+    </footer>
+    
   </body>
 </html>
