--- a/index.html
+++ b/index.html
@@ -11,20 +11,40 @@
               <a href="tabla.html">Nuestros productos</a> |
               <a href="chachocola.html">Chacho-Cola</a> |
               <a href="lisa_cola.html">Lisa Cola</a> |
-              <a href="mirinda.html">Mirinda</a> |
               <a href="joya.html">Joya</a> |
               <a href="orange_crush.html">Orange Crush</a> |
               <a href="contacto.html">Contactanos</a>
             </ul>
           </nav>
       </header>
+          <h1>Distribuidora Rodriguez S.L.</h1>
 
-      <div class="">
-          <h1>Distribuidora Rodriguez</h1>
-      </div>
+          <div class="parrafos">
+              <p>
+                  Con mas de 50 años a nuestras espaldas, Rodriguez S.L. ha realizado encargos por toda la isla de Gran Canaria,
+                  aportando nuestros productos, desde Chacho-Cola hasta Joya. En esta página podrá encontrar toda la información
+                  relevante de nuestros productos y comprobar por si mismo la calidad de los ingredientes de los mismos.
+              </p>
 
+              <p>
+                  Así mismo contamos con nuestros nuevos camiones de 2 toneladas de capacidad de carga,
+                  ¡listos para los encargos mas grandes!
+              </p>
+
+                  <img src="img/camiones.jpg" alt="Camion">
+
+              <p>
+                  Distribuidores Rodriguez S.L. le trae los mejores sabores del momento.
+                  ¿Le gustaría aportar nuevos sabores a su local o sucursal?
+                  ¿Tiene alguna queja o sugerencia? <a href="contacto.html">¡Contactenos!</a>
+              </p>
+          </div>
+
+          <hr>
+          
       <footer>
-
+          <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
+          <a href="index.html">Pagina principal</a>
       </footer>
   </body>
 </html>
