--- a/joya.html
+++ b/joya.html
@@ -5,8 +5,27 @@
     <title>Joya</title>
   </head>
   <body>
-    <div class="">
-        <h1>Joya</h1>
-    </div>
+    <h1>Joya</h1>
+
+    <img src="img/Joya/logo.png" alt="">
+
+    <ul>
+      <li>Fabricante: </li>
+      <li>Lugar de fabricacion: </li>
+      <li>Formatos de venta: </li>
+      <li>Disponibilidad: </li>
+      <li>Ingredientes:
+          <ul>
+            <li>Cacao</li>
+          </ul>
+      </li>
+    </ul>
+
+    <img src="img/Joya/tutifrutti.jpg" alt="">
+
+    <footer>
+        <a href="index.html">Pagina principal</a>
+    </footer>
+
   </body>
 </html>
