--- a/tabla.html
+++ b/tabla.html
@@ -8,5 +8,10 @@
     <div class="">
         <h1>Informacion de nuestros productos</h1>
     </div>
+
+    <footer>
+        <a href="index.html">Pagina principal</a>
+    </footer>
+
   </body>
 </html>
