--- a/chachocola.html
+++ b/chachocola.html
@@ -5,8 +5,28 @@
     <title>Chacho-Cola</title>
   </head>
   <body>
-    <div class="">
-        <h1>Chacho-Cola</h1>
-    </div>
+
+    <h1>Chacho-Cola</h1>
+
+    <img src="img/Chachocola/chacho_cola_logo.jpg" alt="">
+
+    <ul>
+      <li>Fabricante: </li>
+      <li>Lugar de fabricacion: </li>
+      <li>Formatos de venta: </li>
+      <li>Disponibilidad: </li>
+      <li>Ingredientes:
+          <ul>
+            <li>Cacao</li>
+          </ul>
+      </li>
+    </ul>
+
+    <img src="img/Chachocola/chacho_cola_cartel.jpg" alt="">
+
+    <footer>
+        <a href="index.html">Pagina principal</a>
+    </footer>
+
   </body>
 </html>
