--- a/lisa_cola.html
+++ b/lisa_cola.html
@@ -5,8 +5,27 @@
     <title>Lisa Cola</title>
   </head>
   <body>
-    <div class="">
-        <h1>Lisa Cola</h1>
-    </div>
+      <h1>Lisa Cola</h1>
+
+      <img src="img/Lisa_cola/share_lisa_cola.jpg" alt="">
+
+      <ul>
+        <li>Fabricante: </li>
+        <li>Lugar de fabricacion: </li>
+        <li>Formatos de venta: </li>
+        <li>Disponibilidad: </li>
+        <li>Ingredientes:
+            <ul>
+              <li>Cacao</li>
+            </ul>
+        </li>
+      </ul>
+
+      <img src="img/Lisa_cola/lisa_cola_principal.jpg" alt="">
+
+    <footer>
+        <a href="index.html">Pagina principal</a>
+    </footer>
+
   </body>
 </html>
