--- a/orange_crush.html
+++ b/orange_crush.html
@@ -5,8 +5,27 @@
     <title>Orange Crush</title>
   </head>
   <body>
-    <div class="">
-        <h1>Orange Crush</h1>
-    </div>
+    <h1>Orange Crush</h1>
+
+    <img src="img/Orange_crush/OrangeLogo.jpg" alt="">
+
+    <ul>
+      <li>Fabricante: </li>
+      <li>Lugar de fabricacion: </li>
+      <li>Formatos de venta: </li>
+      <li>Disponibilidad: </li>
+      <li>Ingredientes:
+          <ul>
+            <li>Cacao</li>
+          </ul>
+      </li>
+    </ul>
+
+    <img src="img/Orange_crush/Orange_Crush_box.jpg" alt="">
+
+    <footer>
+        <a href="index.html">Pagina principal</a>
+    </footer>
+    
   </body>
 </html>
