Finish HTML part of the project (v1)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <header>
           <nav>
             <ul>
+              <a href="index.html">Inicio</a> |
               <a href="tabla.html">Nuestros productos</a> |
               <a href="chachocola.html">Chacho-Cola</a> |
               <a href="lisa_cola.html">Lisa Cola</a> |
@@ -41,10 +42,9 @@
           </div>
 
           <hr>
-          
+
       <footer>
           <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
-          <a href="index.html">Pagina principal</a>
       </footer>
   </body>
 </html>
