--- a/chachocola.html
+++ b/chachocola.html
@@ -6,26 +6,52 @@
   </head>
   <body>
 
+    <header>
+      <nav>
+        <ul>
+          <a href="index.html">Inicio</a> |
+          <a href="tabla.html">Nuestros productos</a> |
+          <a href="chachocola.html">Chacho-Cola</a> |
+          <a href="lisa_cola.html">Lisa Cola</a> |
+          <a href="joya.html">Joya</a> |
+          <a href="orange_crush.html">Orange Crush</a> |
+          <a href="contacto.html">Contactanos</a>
+        </ul>
+      </nav>
+    </header>
+
     <h1>Chacho-Cola</h1>
 
     <img src="img/Chachocola/chacho_cola_logo.jpg" alt="">
 
+    <p>
+
+        ¿Aun estas pensando en probar lo mas canario que probaras nunca? ¡Atrevete con el nuevo sabor de la temporada!
+        Un sabor canario intenso pero refrescante con un aroma a platano que te dejara 'aplatanao'
+
+    </p>
+
+
     <ul>
-      <li>Fabricante: </li>
-      <li>Lugar de fabricacion: </li>
-      <li>Formatos de venta: </li>
-      <li>Disponibilidad: </li>
+      <li>Fabricante: All Ahu S.L</li>
+      <li>Lugar de fabricacion: Afganistan</li>
+      <li>Formatos de venta: Botellas de 50cl y 1.5L (ambas de plastico)</li>
+      <li>Disponibilidad: En stock</li>
       <li>Ingredientes:
           <ul>
-            <li>Cacao</li>
+            <li>Azucar</li>
+            <li>Citrato de cafeina</li>
+            <li>Galón de jugo de Lima</li>
+            <li>Acido fosforico</li>
+            <li>Colorante E593b</li>
+            <li>Agua carbonada</li>
+            <li>Platano concentrado (maximo 6%)</li>
           </ul>
       </li>
     </ul>
 
-    <img src="img/Chachocola/chacho_cola_cartel.jpg" alt="">
-
     <footer>
-        <a href="index.html">Pagina principal</a>
+
     </footer>
 
   </body>
