--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,20 @@
   </head>
   <body>
 
+    <header>
+      <nav>
+        <ul>
+          <a href="index.html">Inicio</a> |
+          <a href="tabla.html">Nuestros productos</a> |
+          <a href="chachocola.html">Chacho-Cola</a> |
+          <a href="lisa_cola.html">Lisa Cola</a> |
+          <a href="joya.html">Joya</a> |
+          <a href="orange_crush.html">Orange Crush</a> |
+          <a href="contacto.html">Contactanos</a>
+        </ul>
+      </nav>
+    </header>
+
     <h1>Contacto</h1>
 
     <div class="contacto">
@@ -17,15 +31,13 @@
     </div>
 
     <p>
-      O directamente en nuestros almacenes, en la calle Programacion nº 4 (Las Palmas de Gran Canaria, Schamann):
+        O directamente en nuestros almacenes, en la calle Programacion nº 4 (Las Palmas de Gran Canaria, Schamann):
     </p>
     <img src="img/almacen.jpg" alt="">
 
-    <hr>
-
     <footer>
-        <a href="index.html">Pagina principal</a>
+
     </footer>
-    
+
   </body>
 </html>
