--- a/joya.html
+++ b/joya.html
@@ -5,18 +5,45 @@
     <title>Joya</title>
   </head>
   <body>
+
+    <header>
+      <nav>
+        <ul>
+          <a href="index.html">Inicio</a> |
+          <a href="tabla.html">Nuestros productos</a> |
+          <a href="chachocola.html">Chacho-Cola</a> |
+          <a href="lisa_cola.html">Lisa Cola</a> |
+          <a href="joya.html">Joya</a> |
+          <a href="orange_crush.html">Orange Crush</a> |
+          <a href="contacto.html">Contactanos</a>
+        </ul>
+      </nav>
+    </header>
+
     <h1>Joya</h1>
 
     <img src="img/Joya/logo.png" alt="">
 
+    <p>
+
+        Entre nuestros sabores se encuentra la tan deseada Joya, producto importado de Madagascar con unos
+        sabores que te dejaran helado...¿Y que mejor para el verano? ¡Prueba ya nuestro nuevo sabor tuttifrutti
+        y quedate helado!
+
+    </p>
+
     <ul>
-      <li>Fabricante: </li>
-      <li>Lugar de fabricacion: </li>
-      <li>Formatos de venta: </li>
-      <li>Disponibilidad: </li>
+      <li>Fabricante: Tulipan King S.L.</li>
+      <li>Lugar de fabricacion: Madagascar</li>
+      <li>Formatos de venta: Botellas de cristal de 1.5L</li>
+      <li>Disponibilidad: Fuera de stock</li>
       <li>Ingredientes:
           <ul>
-            <li>Cacao</li>
+            <li>Agua</li>
+            <li>Azucar</li>
+            <li>Extracto de naranja paquistani</li>
+            <li>Lima de poniente</li>
+            <li>Puede contener trazas de berenjena, sandia u otras frutas</li>
           </ul>
       </li>
     </ul>
@@ -24,7 +51,7 @@
     <img src="img/Joya/tutifrutti.jpg" alt="">
 
     <footer>
-        <a href="index.html">Pagina principal</a>
+
     </footer>
 
   </body>
