--- a/lisa_cola.html
+++ b/lisa_cola.html
@@ -5,18 +5,45 @@
     <title>Lisa Cola</title>
   </head>
   <body>
+
+    <header>
+      <nav>
+        <ul>
+          <a href="index.html">Inicio</a> |
+          <a href="tabla.html">Nuestros productos</a> |
+          <a href="chachocola.html">Chacho-Cola</a> |
+          <a href="lisa_cola.html">Lisa Cola</a> |
+          <a href="joya.html">Joya</a> |
+          <a href="orange_crush.html">Orange Crush</a> |
+          <a href="contacto.html">Contactanos</a>
+        </ul>
+      </nav>
+    </header>
+
       <h1>Lisa Cola</h1>
 
       <img src="img/Lisa_cola/share_lisa_cola.jpg" alt="">
 
+      <p>
+
+          La nueva Lisa Cola te aportara todo aquello que siempre has deseado. Un sabor intenso pero con la elegancia
+          de la Mona Lisa y un aroma que hara que no pueda dejar de tomarla. ¿Podras con la tentacion?
+
+      </p>
+
       <ul>
-        <li>Fabricante: </li>
-        <li>Lugar de fabricacion: </li>
-        <li>Formatos de venta: </li>
-        <li>Disponibilidad: </li>
+        <li>Fabricante: Lisa Cola Enterprises U.S</li>
+        <li>Lugar de fabricacion: Miami</li>
+        <li>Formatos de venta: Latas de 33cl (en packs de 12)</li>
+        <li>Disponibilidad: En stock</li>
         <li>Ingredientes:
             <ul>
-              <li>Cacao</li>
+              <li>Citrato de cafeina</li>
+              <li>Azucar</li>
+              <li>Monohidropronosito de Benceno</li>
+              <li>Agua carbonada</li>
+              <li>Cocalosefon de carbono</li>
+              <li>Reductor de acido</li>
             </ul>
         </li>
       </ul>
@@ -24,7 +51,7 @@
       <img src="img/Lisa_cola/lisa_cola_principal.jpg" alt="">
 
     <footer>
-        <a href="index.html">Pagina principal</a>
+
     </footer>
 
   </body>
