--- a/orange_crush.html
+++ b/orange_crush.html
@@ -5,18 +5,44 @@
     <title>Orange Crush</title>
   </head>
   <body>
+
+    <header>
+      <nav>
+        <ul>
+          <a href="index.html">Inicio</a> |
+          <a href="tabla.html">Nuestros productos</a> |
+          <a href="chachocola.html">Chacho-Cola</a> |
+          <a href="lisa_cola.html">Lisa Cola</a> |
+          <a href="joya.html">Joya</a> |
+          <a href="orange_crush.html">Orange Crush</a> |
+          <a href="contacto.html">Contactanos</a>
+        </ul>
+      </nav>
+    </header>
+
     <h1>Orange Crush</h1>
 
     <img src="img/Orange_crush/OrangeLogo.jpg" alt="">
 
+    <p>
+
+        La bebida mas refrescante del momento a una llamada de telefono. ¡Adquierela ya y aprovecha la
+        promocion "Arranca el verano" de Orange Crush! ¿Dejaras que otros te lo cuenten?
+
+    </p>
+
     <ul>
-      <li>Fabricante: </li>
-      <li>Lugar de fabricacion: </li>
-      <li>Formatos de venta: </li>
-      <li>Disponibilidad: </li>
+      <li>Fabricante: Manuelita Ramirez S.L.</li>
+      <li>Lugar de fabricacion: Cuba</li>
+      <li>Formatos de venta: Botellas de cristal de 50cl</li>
+      <li>Disponibilidad: En stock</li>
       <li>Ingredientes:
           <ul>
-            <li>Cacao</li>
+            <li>Zumo de Naranja 0.4%</li>
+            <li>Edulcorante A-306</li>
+            <li>Agua carbonada</li>
+            <li>Azucares</li>
+            <li>Colorante E160a</li>
           </ul>
       </li>
     </ul>
@@ -24,8 +50,8 @@
     <img src="img/Orange_crush/Orange_Crush_box.jpg" alt="">
 
     <footer>
-        <a href="index.html">Pagina principal</a>
+
     </footer>
-    
+
   </body>
 </html>
