--- a/tabla.html
+++ b/tabla.html
@@ -5,12 +5,57 @@
     <title>Nuestros productos</title>
   </head>
   <body>
-    <div class="">
-        <h1>Informacion de nuestros productos</h1>
-    </div>
+    <header>
+      <nav>
+        <ul>
+          <a href="index.html">Inicio</a> |
+          <a href="tabla.html">Nuestros productos</a> |
+          <a href="chachocola.html">Chacho-Cola</a> |
+          <a href="lisa_cola.html">Lisa Cola</a> |
+          <a href="joya.html">Joya</a> |
+          <a href="orange_crush.html">Orange Crush</a> |
+          <a href="contacto.html">Contactanos</a>
+        </ul>
+      </nav>
+    </header>
+
+    <h1>Informacion de nuestros productos</h1>
+
+    <table>
+        <tr>
+          <th>Producto</th>
+          <th>Fabricante</th>
+          <th>Tipo del producto</th>
+          <th>Formato de envase</th>
+        </tr>
+        <tr>
+          <td>Orange Crush</td>
+          <td>Manuelita Ramirez S.L.</td>
+          <td>Gaseosa</td>
+          <td>Botellas 50cl (cristal)</td>
+        </tr>
+        <tr>
+          <td>Chacho Cola</td>
+          <td>All Ahu S.L.</td>
+          <td>Gaseosa</td>
+          <td>Botellas de 50cl y 1.5L (platico)</td>
+        </tr>
+        <tr>
+          <td>Joya</td>
+          <td>Tulipan King S.L.</td>
+          <td>Zumo</td>
+          <td>Botellas 1.5L (cristal)</td>
+        </tr>
+        <tr>
+          <td>Lisa Cola</td>
+          <td>Lisa Cola Enterprises U.S</td>
+          <td>Gaseosa</td>
+          <td>Lata 33cl (packs de 12)</td>
+        </tr>
+    </table>
 
     <footer>
-        <a href="index.html">Pagina principal</a>
+
     </footer>
 
   </body>
