Add w3 validator corrections

--- a/lisa_cola.html
+++ b/lisa_cola.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" media="">
+    <meta charset="utf-8">
     <title>Lisa Cola</title>
   </head>
   <body>
@@ -9,13 +9,13 @@
     <header>
       <nav>
         <ul>
-          <a href="index.html">Inicio</a> |
-          <a href="tabla.html">Nuestros productos</a> |
-          <a href="chachocola.html">Chacho-Cola</a> |
-          <a href="lisa_cola.html">Lisa Cola</a> |
-          <a href="joya.html">Joya</a> |
-          <a href="orange_crush.html">Orange Crush</a> |
-          <a href="contacto.html">Contactanos</a>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="tabla.html">Nuestros productos</a></li>
+          <li><a href="chachocola.html">Chacho-Cola</a></li>
+          <li><a href="lisa_cola.html">Lisa Cola</a></li>
+          <li><a href="joya.html">Joya</a></li>
+          <li><a href="orange_crush.html">Orange Crush</a></li>
+          <li><a href="contacto.html">Contactanos</a></li>
         </ul>
       </nav>
     </header>
