--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" media="">
+    <meta charset="utf-8">
     <title>Distribuidoras Rodriguez</title>
   </head>
   <body>
-      <header>
-          <nav>
-            <ul>
-              <a href="index.html">Inicio</a> |
-              <a href="tabla.html">Nuestros productos</a> |
-              <a href="chachocola.html">Chacho-Cola</a> |
-              <a href="lisa_cola.html">Lisa Cola</a> |
-              <a href="joya.html">Joya</a> |
-              <a href="orange_crush.html">Orange Crush</a> |
-              <a href="contacto.html">Contactanos</a>
-            </ul>
-          </nav>
-      </header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="tabla.html">Nuestros productos</a></li>
+          <li><a href="chachocola.html">Chacho-Cola</a></li>
+          <li><a href="lisa_cola.html">Lisa Cola</a></li>
+          <li><a href="joya.html">Joya</a></li>
+          <li><a href="orange_crush.html">Orange Crush</a></li>
+          <li><a href="contacto.html">Contactanos</a></li>
+        </ul>
+      </nav>
+    </header>
           <h1>Distribuidora Rodriguez S.L.</h1>
 
           <div class="parrafos">
