Add some css code (not finished)

--- a/chachocola.html
+++ b/chachocola.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chacho-Cola</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
 
@@ -31,7 +32,7 @@
 
     </p>
 
-
+    <div class="detalles">
     <ul>
       <li>Fabricante: All Ahu S.L</li>
       <li>Lugar de fabricacion: Afganistan</li>
@@ -49,9 +50,10 @@
           </ul>
       </li>
     </ul>
+    </div>
 
     <footer>
-
+      <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
     </footer>
 
   </body>
