--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Distribuidoras Rodriguez</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
     <header>
@@ -20,7 +21,6 @@
     </header>
           <h1>Distribuidora Rodriguez S.L.</h1>
 
-          <div class="parrafos">
               <p>
                   Con mas de 50 años a nuestras espaldas, Rodriguez S.L. ha realizado encargos por toda la isla de Gran Canaria,
                   aportando nuestros productos, desde Chacho-Cola hasta Joya. En esta página podrá encontrar toda la información
@@ -39,9 +39,6 @@
                   ¿Le gustaría aportar nuevos sabores a su local o sucursal?
                   ¿Tiene alguna queja o sugerencia? <a href="contacto.html">¡Contactenos!</a>
               </p>
-          </div>
-
-          <hr>
 
       <footer>
           <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
