--- a/joya.html
+++ b/joya.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Joya</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
 
@@ -51,7 +52,7 @@
     <img src="img/Joya/tutifrutti.jpg" alt="">
 
     <footer>
-
+      <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
     </footer>
 
   </body>
