--- a/orange_crush.html
+++ b/orange_crush.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Orange Crush</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
 
@@ -50,7 +51,7 @@
     <img src="img/Orange_crush/Orange_Crush_box.jpg" alt="">
 
     <footer>
-
+      <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
     </footer>
 
   </body>
