--- a/tabla.html
+++ b/tabla.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Nuestros productos</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
     <header>
@@ -54,8 +55,7 @@
     </table>
 
     <footer>
-
+      <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
     </footer>
-
   </body>
 </html>
