--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contactanos</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
 
@@ -24,20 +25,16 @@
 
     <div class="contacto">
         <p>Puede contactarnos a traves de nuestro telefono o correo electronico:</p>
-        <p>Telefono: 928-504-803-802-465</p>
+        <p><strong>Telefono</strong>: 928-504-803-802-465</p>
         <p>
-            E-mail: <a href="mailto:distribuidoras@rodriguez.sl">distribuidoras@rodriguez.sl</a>
+            <strong>E-mail</strong>: <a href="mailto:distribuidoras@rodriguez.sl">distribuidoras@rodriguez.sl</a>
         </p>
     </div>
 
     <p>
         O directamente en nuestros almacenes, en la calle Programacion nº 4 (Las Palmas de Gran Canaria, Schamann):
     </p>
-    <img src="img/almacen.jpg" alt="">
-
-    <footer>
-
-    </footer>
+    <img src="img/almacen.jpg" alt="" id="fotoContacto">
 
   </body>
 </html>
