--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 
     <header>
       <nav>
-        <ul>
+        <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="tabla.html">Nuestros productos</a></li>
           <li><a href="chachocola.html">Chacho-Cola</a></li>
