--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="tabla.html">Nuestros productos</a></li>
           <li><a href="chachocola.html">Chacho-Cola</a></li>
