Finish css part of the project

--- a/chachocola.html
+++ b/chachocola.html
@@ -25,21 +25,21 @@
 
     <img src="img/Chachocola/chacho_cola_logo.jpg" alt="">
 
-    <p>
+    <p id="fraseProducto">
 
         ¿Aun estas pensando en probar lo mas canario que probaras nunca? ¡Atrevete con el nuevo sabor de la temporada!
         Un sabor canario intenso pero refrescante con un aroma a platano que te dejara 'aplatanao'
 
     </p>
 
-    <div class="detalles">
-    <ul>
+
+    <ul class="detallesProducto">
       <li>Fabricante: All Ahu S.L</li>
       <li>Lugar de fabricacion: Afganistan</li>
       <li>Formatos de venta: Botellas de 50cl y 1.5L (ambas de plastico)</li>
       <li>Disponibilidad: En stock</li>
       <li>Ingredientes:
-          <ul>
+          <ul class="ingredientes">
             <li>Azucar</li>
             <li>Citrato de cafeina</li>
             <li>Galón de jugo de Lima</li>
@@ -50,7 +50,6 @@
           </ul>
       </li>
     </ul>
-    </div>
 
     <footer>
       <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
