--- a/joya.html
+++ b/joya.html
@@ -25,7 +25,7 @@
 
     <img src="img/Joya/logo.png" alt="">
 
-    <p>
+    <p id="fraseProducto">
 
         Entre nuestros sabores se encuentra la tan deseada Joya, producto importado de Madagascar con unos
         sabores que te dejaran helado...¿Y que mejor para el verano? ¡Prueba ya nuestro nuevo sabor tuttifrutti
@@ -33,13 +33,13 @@
 
     </p>
 
-    <ul>
+    <ul class="detallesProducto">
       <li>Fabricante: Tulipan King S.L.</li>
       <li>Lugar de fabricacion: Madagascar</li>
       <li>Formatos de venta: Botellas de cristal de 1.5L</li>
       <li>Disponibilidad: Fuera de stock</li>
       <li>Ingredientes:
-          <ul>
+          <ul class="ingredientes">
             <li>Agua</li>
             <li>Azucar</li>
             <li>Extracto de naranja paquistani</li>
