--- a/lisa_cola.html
+++ b/lisa_cola.html
@@ -25,20 +25,20 @@
 
       <img src="img/Lisa_cola/share_lisa_cola.jpg" alt="">
 
-      <p>
+      <p id="fraseProducto">
 
           La nueva Lisa Cola te aportara todo aquello que siempre has deseado. Un sabor intenso pero con la elegancia
           de la Mona Lisa y un aroma que hara que no pueda dejar de tomarla. ¿Podras con la tentacion?
 
       </p>
 
-      <ul>
+      <ul class="detallesProducto">
         <li>Fabricante: Lisa Cola Enterprises U.S</li>
         <li>Lugar de fabricacion: Miami</li>
         <li>Formatos de venta: Latas de 33cl (en packs de 12)</li>
         <li>Disponibilidad: En stock</li>
         <li>Ingredientes:
-            <ul>
+            <ul class="ingredientes">
               <li>Citrato de cafeina</li>
               <li>Azucar</li>
               <li>Monohidropronosito de Benceno</li>
