--- a/tabla.html
+++ b/tabla.html
@@ -29,32 +29,32 @@
           <th>Formato de envase</th>
         </tr>
         <tr>
-          <td>Orange Crush</td>
+          <td><a href="orange_crush.html">Orange Crush</a></td>
           <td>Manuelita Ramirez S.L.</td>
           <td>Gaseosa</td>
           <td>Botellas 50cl (cristal)</td>
         </tr>
         <tr>
-          <td>Chacho Cola</td>
+          <td><a href="chachocola.html">Chacho Cola</a></td>
           <td>All Ahu S.L.</td>
           <td>Gaseosa</td>
           <td>Botellas de 50cl y 1.5L (platico)</td>
         </tr>
         <tr>
-          <td>Joya</td>
+          <td><a href="joya.html">Joya</a></td>
           <td>Tulipan King S.L.</td>
           <td>Zumo</td>
           <td>Botellas 1.5L (cristal)</td>
         </tr>
         <tr>
-          <td>Lisa Cola</td>
+          <td><a href="lisa_cola.html">Lisa Cola</a></td>
           <td>Lisa Cola Enterprises U.S</td>
           <td>Gaseosa</td>
           <td>Lata 33cl (packs de 12)</td>
         </tr>
     </table>
 
-    <footer>
+    <footer id="footerTabla">
       <p>Sede en Las Palmas de Gran Canaria, Calle Programacion nº 4</p>
     </footer>
   </body>
